nov and dec events update

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <br/>
             <h3>It's Me... <br/> Tarun Jain</h3>
             <br/>
-            <h4 class="col-mt-4"> DevRel @AI Planet🥑 || <br/> Community Lead @Embedchain.ai🤗|| <br/> GDE in ML🚀 </h4>
+            <h4 class="col-mt-4"> DevRel @AI Planet🥑 || <br/> AI with Tarun- YouTube🤗|| <br/> GDE in ML🚀 || <br/> GSoC'23 caMicroscope</h4>
             <a href="#about" class="btn-get-started">Know more</a>          
             </div>
           <div class="col-lg-6 order-1 order-lg-1">
@@ -114,6 +114,19 @@
           </div>
 
           <div class="row">
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            ><a href="https://www.linkedin.com/posts/jaintarun75_ai-generativeai-community-activity-7145675812631904257-mmi5?utm_source=share&utm_medium=member_desktop">
+              <div class="icon-box">
+                <h4 class="title">Chief Guest at Ramaiah Institute</h4>
+                <p class="description">
+                  Got invited as Chief Guest at Ramaiah Institute of Technology to inaugurate the new AI Club "Tensor"
+                </p>
+              </div>
+            </a>
+            </div>
           <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
@@ -131,14 +144,28 @@
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
               data-aos="zoom-in"
               data-aos-delay="400"
-            ><a href="https://www.eventbrite.com/e/pie-ai-bangalore-langchain-recipes-tickets-689696118657?aff=oddtdtcreator">
+            ><a href="https://www.linkedin.com/posts/jaintarun75_devfest-sri-lanka-2023-grateful-for-the-activity-7142776571743928320-FCbz?utm_source=share&utm_medium=member_desktop">
               <div class="icon-box">
-                <h4 class="title">Langchain Recipes</h4>
+                <h4 class="title">DevFest Sri Lanka</h4>
                 <p class="description">
-                  In this event, I explained the basic components used in Langchain and at the end of my session I demonstrated a Q&A project. 
+                 I got opportunity to speak on both the days at DevFest Sri Lanka. Day-1: CodeLabs- Build your first GAN with TensorFlow. Day-2: MainConference- Intro to LLMs and Fine Tuning 
                 </p>
               </div>
             </a>
+            </div>
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch"
+              data-aos="zoom-in"
+              data-aos-delay="400"
+            >
+            <a href="https://gdg.community.dev/events/details/google-gdg-kathmandu-presents-devfest-kathmandu-2023/">
+              <div class="icon-box">
+                <h4 class="title">DevFest Kathmandu, Nepal</h4>
+                <p class="description">
+                 Got invited at Kathmandu Nepal to speak on Retrieval Augmented Generation and Fine Tuning for large language models and code demo
+                </p>
+              </div>
+              </a>
             </div>
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
@@ -163,35 +190,6 @@
                 <h4 class="title">Deep Learning Workshop- IEEE</h4>
                 <p class="description">
                      Organized Two Days Hands-on Workshop on Deep Learning under IEEE at Cambridge Institute of Technology. 
-                </p>
-              </div>
-            </a>
-            </div>
-
-            <div
-              class="col-md-6 col-lg-3 d-flex align-items-stretch"
-              data-aos="zoom-in"
-              data-aos-delay="400"
-            >
-            <a href="https://www.eventbrite.com/e/pie-ai-bangalore-chatgpt3-architecture-breakdown-tickets-522974369417">
-              <div class="icon-box">
-                <h4 class="title">ChatGPT Architecture Breakdown</h4>
-                <p class="description">
-                  In this event, I spoke on RLHF, InstructGPT, Transformers and PPO algorithm used to build ChatGPT. 
-                </p>
-              </div>
-              </a>
-            </div>
-            
-            <div
-              class="col-md-6 col-lg-3 d-flex align-items-stretch"
-              data-aos="zoom-in"
-              data-aos-delay="400"
-            ><a href="https://github.com/Anime-Vyuh/AV-Workshops/tree/main/Image_Processing">
-              <div class="icon-box">
-                <h4 class="title">Image Processing Workshop</h4>
-                <p class="description">
-                  In this Workshop, I conducted a Hands-on session on Image processing algorithms using MATLAB programming. 
                 </p>
               </div>
             </a>
@@ -223,19 +221,6 @@
                   </p>
               </div>
               </a>
-            </div>
-            <div
-              class="col-md-6 col-lg-3 d-flex align-items-stretch"
-              data-aos="zoom-in"
-              data-aos-delay="400"
-            ><a href="https://www.meetup.com/tfugblr/events/291662146/">
-              <div class="icon-box">
-                <h4 class="title">Scalability of ML Applications</h4>
-                <p class="description">
-                  The event covered various topics, including distributed computing, parallel processing, model optimization, deployment architectures, and more.
-                </p>
-              </div>
-            </a>
             </div>
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch"
