--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <br/>
             <h3>It's Me... <br/> Tarun Jain</h3>
             <br/>
-            <h4 class="col-mt-4"> Data Scientist @AI Planet🥑 || <br/> AI with Tarun- YouTube🤗|| <br/> GDE in ML🚀 || <br/> GSoC'23 caMicroscope</h4>
+            <h4 class="col-mt-4"> Data Scientist @AI Planet🥑 || <br/> AI with Tarun- YouTube🤗|| <br/> GDE in AI/ML🚀 || <br/> GSoC'23 caMicroscope</h4>
             <a href="#about" class="btn-get-started">Know more</a>          
             </div>
           <div class="col-lg-6 order-1 order-lg-1">
