--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <div class="row">
           <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1">
             <br/>
-            <h3>It's Me... <br/> Tarun Jain</h3>
+            <h3>It's Me... <br/> Tarun Jain </h3> 
             <br/>
-            <h4 class="col-mt-4"> Data Scientist @AI Planet🥑 || <br/> AI with Tarun- YouTube🤗|| <br/> GDE in AI/ML🚀 || <br/> GSoC'23 caMicroscope</h4>
+            <h4 class="col-mt-4"> Data Scientist @AI Planet🥑 || <br/> AI with Tarun- YouTube🤗|| <br/> GDE in AI/ML🚀 || <br/> GSoC'24 Red Hen Lab</h4>
             <a href="#about" class="btn-get-started">Know more</a>          
             </div>
           <div class="col-lg-6 order-1 order-lg-1">
