--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
               <h3 data-aos="fade-up">About Me</h3>
               <p></p>
               <p data-aos="fade-up" data-aos-delay="90">
-                Hello! My name is Tarun R Jain. I'm a passionate coder with expertise in Machine Learning, Image Processing, and Deep Learning. I've published over 80 blog articles documenting my coding journey, and I'm actively involved in various communities, including <a href="https://huggingface.co/lucifertrj">Hugging Face-Keras Working Group</a>, <a href="https://www.deeplearning.ai/events/">Deep Learning AI- Bangalore Ambassador</a>, <a href="https://www.meetup.com/tfugblr/members/?op=leaders">TensorFlow User Group Bangalore- Assistant Organizer</a> and <a href="https://auth.geeksforgeeks.org/user/jaintarun/articles">Geeksforgeeks- Technical content writer</a>.
+                Tarun Jain is a Data Scientist at AI Planet and is recognized as a Google Developer Expert in AI/ML. He enjoys contributing to open-source projects and maintains two repositories: OpenAGI, for building AI Agents, and BeyondLLM, for quick experimenting, evaluating and observing RAG pipelines. Tarun is was also part in Google Summer of Code 2024 at Red Hen Lab. 
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
-                What I love most about coding is the ability to create something new and solve complex problems. I'm constantly learning and experimenting with new techniques to improve my skills and knowledge. In addition to my technical pursuits, I also enjoy watching anime and reading manga in my free time. </p>
+                Over the past two years, he has been a part of DeepLearning.AI's Pie & AI Ambassador program, where he curates content for his YouTube channel, AI with Tarun. Furthermore Tarun has given over 30+ talks including 5 Internation in-person talks as a speaker
               <p data-aos="fade-up" data-aos-delay="90">
                 If you're interested in collaborating on a project or discussing a coding challenge, feel free to reach out to me.
               </p>
