--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
               <h3 data-aos="fade-up">About Me</h3>
               <p></p>
               <p data-aos="fade-up" data-aos-delay="90">
-                Tarun Jain is a Data Scientist at AI Planet and is recognized as a Google Developer Expert in AI/ML. He enjoys contributing to open-source projects and maintains two repositories: OpenAGI, for building AI Agents, and BeyondLLM, for quick experimenting, evaluating and observing RAG pipelines. Tarun is was also part in Google Summer of Code 2024 at Red Hen Lab. 
+                Tarun Jain is a Data Scientist at AI Planet and is recognized as a Google Developer Expert in AI/ML. He enjoys contributing to open-source projects and maintains two repositories: OpenAGI, for building AI Agents, and BeyondLLM, for quick experimenting, evaluating, and observing RAG pipelines. Tarun is was also part in Google Summer of Code 2024 at Red Hen Lab. 
               </p>
               <p data-aos="fade-up" data-aos-delay="90">
-                Over the past two years, he has been a part of DeepLearning.AI's Pie & AI Ambassador program, where he curates content for his YouTube channel, AI with Tarun. Furthermore Tarun has given over 30+ talks including 5 Internation in-person talks as a speaker
+                Over the past two years, he has been a part of DeepLearning.AI's Pie & AI Ambassador program, where he curates content for his YouTube channel, AI with Tarun. Furthermore, Tarun has given over 30+ talks including 5 International in-person talks as a speaker
               <p data-aos="fade-up" data-aos-delay="90">
                 If you're interested in collaborating on a project or discussing a coding challenge, feel free to reach out to me.
               </p>
