--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@
             <h3>It's Me... <br/> Tarun Jain </h3>
             <br/>
             <h4 class="col-mt-4">
-              Data Scientist @AI Planet🥑 || <br/>
               AI with Tarun- YouTube🤗|| <br/>
               GDE in AI/ML🚀 || <br/>
-              GSoC'24 Red Hen Lab
+              GSoC x 2
             </h4>
             <a href="#about" class="btn-get-started">Know more</a>
           </div>
@@ -112,6 +111,7 @@
       <!-- End About Section -->
 
       <!-- ======= Events/Workshops Section ======= -->
+<!-- ======= Events/Workshops Section ======= -->
 <section id="events" class="services section-bg">
   <div class="container">
     <div class="section-title" data-aos="fade-up">
@@ -121,33 +121,45 @@
 
     <!-- Initial 8 Events (visible at start) -->
     <div class="row">
-      <!-- 1. PyCon Hong Kong 2024 -->
+      <!-- 1. PyCon Hong Kong 2025 -->
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-        <a href="https://pretalx.com/pyconhk2024/speaker/XVM8TR/" target="_blank">
+        <a href="https://pycon.hk" target="_blank">
           <div class="icon-box">
-            <h4 class="title">PyCon HK 2024</h4>
+            <h4 class="title">PyCon HK 2025</h4>
             <p class="description">
-              "Autonomous AI Agents for Dummies" – a session on building self-reasoning, autonomous AI agents.
+              "Search Matters: Engineering search systems that actually work" – on Qdrant Hybrid Search and MMR.
             </p>
           </div>
         </a>
       </div>
 
-      <!-- 2. PyCon APAC 2024 -->
+      <!-- 2. EuroPython 2025 -->
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="150">
-        <a href="https://in.pycon.org/cfp/2024/proposals/building-efficient-rag-pipeline-using-open-source-llms~bDk8x/" target="_blank">
+        <a href="https://ep2025.europython.eu" target="_blank">
           <div class="icon-box">
-            <h4 class="title">PyCon APAC 2024</h4>
+            <h4 class="title">EuroPython 2025</h4>
             <p class="description">
-              Demonstrated building an efficient RAG pipeline using open-source LLMs, embeddings and re-ranking techniques.
+              "Efficient Query Routing using Agentic RAG" – building intelligent retrieval systems with agents.
             </p>
           </div>
         </a>
       </div>
 
-      <!-- 3. PyCon MY -->
+      <!-- 3. PyCon Australia 2025 -->
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
-        <a href="https://www.pycon.my/" target="_blank">
+        <a href="https://2025.pycon.org.au" target="_blank">
+          <div class="icon-box">
+            <h4 class="title">PyCon Australia 2025</h4>
+            <p class="description">
+              "MCP for dummies: Feed more context to LLM" – hands-on with Model Context Protocol for smarter agents.
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <!-- 4. PyCon MY 2024 (updated link) -->
+      <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="250">
+        <a href="https://x.com/pyconmy/status/1827230045301305753" target="_blank">
           <div class="icon-box">
             <h4 class="title">PyCon MY 2024</h4>
             <p class="description">
@@ -157,8 +169,8 @@
         </a>
       </div>
 
-      <!-- 4. GDG Bangalore Connect -->
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="250">
+      <!-- 5. GDG Bangalore Connect -->
+      <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
         <a href="https://gdg.community.dev/events/details/google-gdg-bangalore-presents-bangalore-dev-connect/" target="_blank">
           <div class="icon-box">
             <h4 class="title">GDG Bangalore Connect</h4>
@@ -169,8 +181,8 @@
         </a>
       </div>
 
-      <!-- 5. DevFest Jalandhar 2024 -->
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
+      <!-- 6. DevFest Jalandhar 2024 -->
+      <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="350">
         <a href="https://gdg.community.dev/events/details/google-gdg-jalandhar-presents-devfest-jalandhar-2024/" target="_blank">
           <div class="icon-box">
             <h4 class="title">DevFest Jalandhar 2024</h4>
@@ -181,8 +193,8 @@
         </a>
       </div>
 
-      <!-- 6. Chief Guest at Ramaiah Institute -->
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="350">
+      <!-- 7. Chief Guest at Ramaiah Institute -->
+      <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
         <a href="https://www.linkedin.com/posts/jaintarun75_ai-generativeai-community-activity-7145675812631904257-mmi5">
           <div class="icon-box">
             <h4 class="title">Chief Guest at Ramaiah Institute</h4>
@@ -193,8 +205,8 @@
         </a>
       </div>
 
-      <!-- 7. DevFest Bhubaneshwar 2023 -->
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="400">
+      <!-- 8. DevFest Bhubaneshwar 2023 -->
+      <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="450">
         <a href="https://devfest.gdgbbsr.in/speakers">
           <div class="icon-box">
             <h4 class="title">DevFest Bhubaneshwar 2023</h4>
@@ -204,25 +216,25 @@
           </div>
         </a>
       </div>
-
-      <!-- 8. DevFest Sri Lanka -->
-      <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="450">
-        <a href="https://www.linkedin.com/posts/jaintarun75_devfest-sri-lanka-2023-grateful-for-the-activity-7142776571743928320-FCbz">
-          <div class="icon-box">
-            <h4 class="title">DevFest Sri Lanka</h4>
-            <p class="description">
-              Sessions on building GANs with TensorFlow and an introduction to LLM fine-tuning.
-            </p>
-          </div>
-        </a>
-      </div>
     </div>
 
     <!-- Hidden Events (shown after clicking "Show More") -->
     <div id="more-events" style="display: none;">
       <div class="row">
-        <!-- 9. DevFest Kathmandu -->
+        <!-- 9. DevFest Sri Lanka -->
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="500">
+          <a href="https://www.linkedin.com/posts/jaintarun75_devfest-sri-lanka-2023-grateful-for-the-activity-7142776571743928320-FCbz">
+            <div class="icon-box">
+              <h4 class="title">DevFest Sri Lanka</h4>
+              <p class="description">
+                Sessions on building GANs with TensorFlow and an introduction to LLM fine-tuning.
+              </p>
+            </div>
+          </a>
+        </div>
+
+        <!-- 10. DevFest Kathmandu -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="550">
           <a href="https://gdg.community.dev/events/details/google-gdg-kathmandu-presents-devfest-kathmandu-2023/">
             <div class="icon-box">
               <h4 class="title">DevFest Kathmandu, Nepal</h4>
@@ -233,8 +245,8 @@
           </a>
         </div>
 
-        <!-- 10. Keras Community Days -->
-        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="550">
+        <!-- 11. Keras Community Days -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="600">
           <a href="https://keras-community-day-bangalore.webflow.io/#Speakers-TFUG">
             <div class="icon-box">
               <h4 class="title">Keras Community Days Bangalore 2023</h4>
@@ -245,8 +257,8 @@
           </a>
         </div>
 
-        <!-- 11. Deep Learning Workshop IEEE -->
-        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="600">
+        <!-- 12. Deep Learning Workshop IEEE -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="650">
           <a href="https://github.com/Anime-Vyuh/AV-Workshops/tree/main/Deep_Learning_Workshop">
             <div class="icon-box">
               <h4 class="title">Deep Learning Workshop- IEEE</h4>
@@ -257,8 +269,8 @@
           </a>
         </div>
 
-        <!-- 12. Deep Learning Workshop GDSC -->
-        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="650">
+        <!-- 13. Deep Learning Workshop GDSC -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="700">
           <a href="https://gdsc.community.dev/events/details/developer-student-clubs-nitte-meenakshi-institute-of-technology-bengaluru-presents-tensorflow-hands-on-session-solution-challenge/">
             <div class="icon-box">
               <h4 class="title">Deep Learning Workshop- GDSC</h4>
@@ -269,8 +281,8 @@
           </a>
         </div>
 
-        <!-- 13. MediaPipe Workshop -->
-        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="700">
+        <!-- 14. MediaPipe Workshop -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="750">
           <a href="https://www.eventbrite.com/e/pie-ai-bangalore-mediapipe-tasks-api-bootcamp-tickets-577711048297">
             <div class="icon-box">
               <h4 class="title">MediaPipe Tasks API Bootcamp</h4>
@@ -281,8 +293,8 @@
           </a>
         </div>
 
-        <!-- 14. ML World Workshop -->
-        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="750">
+        <!-- 15. ML World Workshop -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="800">
           <a href="https://www.eventbrite.com/e/pie-ai-bangalore-getting-started-with-ml-world-tickets-672454729197">
             <div class="icon-box">
               <h4 class="title">Getting started with ML world</h4>
@@ -293,25 +305,13 @@
           </a>
         </div>
 
-        <!-- 15. LLM Fine-tuning Workshop -->
-        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="800">
+        <!-- 16. LLM Fine-tuning Workshop -->
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="850">
           <a href="https://www.eventbrite.com/e/pie-ai-bangalore-fine-tuning-in-llms-tickets-689694533917">
             <div class="icon-box">
               <h4 class="title">Fine Tune LLMs</h4>
               <p class="description">
                 Demonstrated fine-tuning Llama2 using LoRA PEFT on custom data.
-              </p>
-            </div>
-          </a>
-        </div>
-
-        <!-- 16. Object Tracking Workshop -->
-        <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="850">
-          <a href="https://www.eventbrite.com/e/pie-ai-bangalore-object-tracking-bootcamp-tickets-608788802697">
-            <div class="icon-box">
-              <h4 class="title">Object Tracking Bootcamp</h4>
-              <p class="description">
-                Focused on object detection and tracking with a live vehicle tracking demo.
               </p>
             </div>
           </a>
@@ -327,6 +327,7 @@
     </div>
   </div>
 </section>
+
 
       <!-- ======= Awards Section ======= -->
       <section id="awards" class="services section-bg">
@@ -743,3 +744,4 @@
     </script>
   </body>
 </html>
+
