--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="row">
       <!-- 1. PyCon Hong Kong 2025 -->
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-        <a href="https://pycon.hk" target="_blank">
+        <a href="https://pretalx.com/pyconhk2025/speaker/XVM8TR/" target="_blank">
           <div class="icon-box">
             <h4 class="title">PyCon HK 2025</h4>
             <p class="description">
@@ -135,7 +135,7 @@
 
       <!-- 2. EuroPython 2025 -->
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="150">
-        <a href="https://ep2025.europython.eu" target="_blank">
+        <a href="https://ep2025.europython.eu/speaker/tarun-jain/" target="_blank">
           <div class="icon-box">
             <h4 class="title">EuroPython 2025</h4>
             <p class="description">
@@ -147,7 +147,7 @@
 
       <!-- 3. PyCon Australia 2025 -->
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
-        <a href="https://2025.pycon.org.au" target="_blank">
+        <a href="https://2025.pycon.org.au/program/D8DNXQ/" target="_blank">
           <div class="icon-box">
             <h4 class="title">PyCon Australia 2025</h4>
             <p class="description">
@@ -744,4 +744,5 @@
     </script>
   </body>
 </html>
+
 
